--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -88,12 +88,33 @@
                                         ng-model="tool_website">
                                     <label for="generalWebsite">Website</label>
                                 </div>
-                                <div class="input-field col s12 grid-s12-m12-l12">
+                                <!-- <div class="input-field col s12 grid-s12-m12-l12">
                                     <textarea id="generalDescription" class="validate materialize-textarea tooltipped"
                                         data-tooltip="General tool/data description. You can use markdown"
                                         ng-model="tool_description"></textarea>
                                     <label for="generalDescription">Description</label>
+                                </div> -->
+                                <!-- ------------------------------------------------------------------------------------ -->
+                                <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                    <div class="grid-s12-m12-l12">
+                                        <ul class="tabs" id="toolDataDescTabs">
+                                            <li id="toolsDataDescWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#toolsDataDescWrite">write</a></li>
+                                            <li id="toolsDataDescPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#toolsDataDescPreview">Preview</a></li>
+                                        </ul>
+                                    </div>
+                                    <div id="toolsDataDescWrite" class="grid-s12-m12-l12">
+                                        <div class="input-field">
+                                            <textarea id="generalDescription" class="validate materialize-textarea tooltipped"
+                                                data-tooltip="General tool/data description. You can use markdown"
+                                                ng-model="tool_description"></textarea>
+                                            <label for="generalDescription">Description</label>
+                                        </div>
+                                    </div>
+                                    <div id="toolsDataDescPreview" class="grid-s12-m12-l12 input-field">
+                                        Preview Text
+                                    </div>
                                 </div>
+                                <!-- ------------------------------------------------------------------------------------ -->
                                 <div class="input-field col s12 grid-s12-m12-l12" ng-show="tools_info_forked_from">
                                     <textarea id="generalEditSummary" class="validate materialize-textarea"
                                         ng-model="tool_changes"></textarea>
