--- a/OpenBioC/app/templates/app/qa.html
+++ b/OpenBioC/app/templates/app/qa.html
@@ -66,7 +66,23 @@
             <a class="waves-effect btn-flat qaReplyBtn" href=""
                 ng-click="gen_qa_reply_button_clicked(post.id, '{{ qa_type }}')"><u>Reply</u></a>
             <div class="input-field" ng-show="post.replying">
-                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                <!-- <textarea class="validate" ng-model="qa_current_reply"></textarea> -->
+                <!-- ------------------------------------------------------------------------------------ -->
+                <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                    <div class="grid-s12-m12-l12">
+                        <ul class="tabs" id="qapostTabs">
+                            <li id="qapostWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#qapostWrite">Write</a></li>
+                            <li id="qapostPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#qapostPreview">Preview</a></li>
+                        </ul>
+                    </div>
+                    <div id="qapostWrite" class="grid-s12-m12-l12">
+                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                    </div>
+                    <div id="qapostPreview" class="grid-s12-m12-l12 input-field">
+                        Preview Text
+                    </div>
+                </div>
+                <!-- ------------------------------------------------------------------------------------ -->
                 <div>
                     <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                     <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
@@ -93,7 +109,23 @@
                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                         ng-click="gen_qa_reply_button_clicked(post2.id, '{{ qa_type }}')"><u>Reply</u></a>
                     <div class="input-field" ng-show="post2.replying">
-                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                        <!-- <textarea class="validate" ng-model="qa_current_reply"></textarea> -->
+                        <!-- ------------------------------------------------------------------------------------ -->
+                        <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                            <div class="grid-s12-m12-l12">
+                                <ul class="tabs" id="qapost2Tabs">
+                                    <li id="qapost2WriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#qapost2Write">Write</a></li>
+                                    <li id="qapost2PreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#qapost2Preview">Preview</a></li>
+                                </ul>
+                            </div>
+                            <div id="qapost2Write" class="grid-s12-m12-l12">
+                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                            </div>
+                            <div id="qapost2Preview" class="grid-s12-m12-l12 input-field">
+                                Preview Text
+                            </div>
+                        </div>
+                        <!-- ------------------------------------------------------------------------------------ -->
                         <div>
                             <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                             <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
@@ -121,7 +153,23 @@
                             <a class="waves-effect btn-flat qaReplyBtn" href=""
                                 ng-click="gen_qa_reply_button_clicked(post3.id, '{{ qa_type }}')"><u>Reply</u></a>
                             <div class="input-field" ng-show="post3.replying">
-                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                <!-- <textarea class="validate" ng-model="qa_current_reply"></textarea> -->
+                                <!-- ------------------------------------------------------------------------------------ -->
+                                <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                    <div class="grid-s12-m12-l12">
+                                        <ul class="tabs" id="qapost3Tabs">
+                                            <li id="qapost3WriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#qapost3Write">Write</a></li>
+                                            <li id="qapost3PreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#qapost3Preview">Preview</a></li>
+                                        </ul>
+                                    </div>
+                                    <div id="qapost3Write" class="grid-s12-m12-l12">
+                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                    </div>
+                                    <div id="qapost3Preview" class="grid-s12-m12-l12 input-field">
+                                        Preview Text
+                                    </div>
+                                </div>
+                                <!-- ------------------------------------------------------------------------------------ -->
                                 <div>
                                     <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                                     <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
@@ -149,8 +197,24 @@
                                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                                         ng-click="gen_qa_reply_button_clicked(post4.id, '{{ qa_type }}')"><u>Reply</u></a>
                                     <div class="input-field" ng-show="post4.replying">
-                                        <textarea class="validate"
-                                            ng-model="qa_current_reply"></textarea>
+                                        <!-- <textarea class="validate"
+                                            ng-model="qa_current_reply"></textarea> -->
+                                        <!-- ------------------------------------------------------------------------------------ -->
+                                        <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                            <div class="grid-s12-m12-l12">
+                                                <ul class="tabs" id="qapost4Tabs">
+                                                    <li id="qapost4WriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#qapost4Write">Write</a></li>
+                                                    <li id="qapost4PreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#qapost4Preview">Preview</a></li>
+                                                </ul>
+                                            </div>
+                                            <div id="qapost4Write" class="grid-s12-m12-l12">
+                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                            </div>
+                                            <div id="qapost4Preview" class="grid-s12-m12-l12 input-field">
+                                                Preview Text
+                                            </div>
+                                        </div>
+                                        <!-- ------------------------------------------------------------------------------------ -->
                                         <div>
                                             <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                                             <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
