--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -98,7 +98,7 @@
                                 <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
                                     <div class="grid-s12-m12-l12">
                                         <ul class="tabs" id="toolDataDescTabs">
-                                            <li id="toolsDataDescWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#toolsDataDescWrite">write</a></li>
+                                            <li id="toolsDataDescWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#toolsDataDescWrite">Write</a></li>
                                             <li id="toolsDataDescPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#toolsDataDescPreview">Preview</a></li>
                                         </ul>
                                     </div>
@@ -486,11 +486,31 @@
                                         ng-model="workflow_website">
                                     <label for="workflowsGeneralWebsite">Website</label>
                                 </div>
-                                <div class="input-field col s12 grid-s12-m12-l12">
+                                <!-- <div class="input-field col s12 grid-s12-m12-l12">
                                     <textarea id="workflowsGeneralDescription" class="validate materialize-textarea"
                                         ng-model="workflow_description"></textarea>
                                     <label for="workflowsGeneralDescription">Description</label>
+                                </div> -->
+                                <!-- ------------------------------------------------------------------------------------ -->
+                                <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                    <div class="grid-s12-m12-l12">
+                                        <ul class="tabs" id="workflowDescTabs">
+                                            <li id="workflowDescWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#workflowDescWrite">Write</a></li>
+                                            <li id="workflowDescPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#workflowDescPreview">Preview</a></li>
+                                        </ul>
+                                    </div>
+                                    <div id="workflowDescWrite" class="grid-s12-m12-l12">
+                                        <div class="input-field">
+                                            <textarea id="workflowsGeneralDescription" class="validate materialize-textarea"
+                                                ng-model="workflow_description"></textarea>
+                                            <label for="workflowsGeneralDescription">Description</label>
+                                        </div>
+                                    </div>
+                                    <div id="workflowDescPreview" class="grid-s12-m12-l12 input-field">
+                                        Preview Text
+                                    </div>
                                 </div>
+                                <!-- ------------------------------------------------------------------------------------ -->
                                 <div class="input-field col s12 m12 grid-s12-m12-l12">
                                     <div id="workflowChips" class="input-field chips left-align" style="margin:0px">
                                     </div>
@@ -1214,12 +1234,31 @@
                                 <input id="qatitle" type="text" class="validate" ng-model="qa_title">
                                 <label for="qatitle">Title</label>
                             </div>
-
-                            <div class="input-field">
+                            <!-- <div class="input-field">
                                 <textarea id="comment" class="validate materialize-textarea"
                                     ng-model="qa_comment"></textarea>
                                 <label for="comment">Comment</label>
+                            </div> -->
+                            <!-- ------------------------------------------------------------------------------------ -->
+                            <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                <div class="grid-s12-m12-l12">
+                                    <ul class="tabs" id="qaCommentTabs">
+                                        <li id="qaCommentWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#qaCommentWrite">Write</a></li>
+                                        <li id="qaCommentPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#qaCommentPreview">Preview</a></li>
+                                    </ul>
+                                </div>
+                                <div id="qaCommentWrite" class="grid-s12-m12-l12">
+                                    <div class="input-field">
+                                        <textarea id="comment" class="validate materialize-textarea"
+                                            ng-model="qa_comment"></textarea>
+                                        <label for="comment">Comment</label>
+                                    </div>
+                                </div>
+                                <div id="qaCommentPreview" class="grid-s12-m12-l12 input-field">
+                                    Preview Text
+                                </div>
                             </div>
+                            <!-- ------------------------------------------------------------------------------------ -->
                         </div>
                     </form>
                 </div>
@@ -1250,7 +1289,23 @@
                             ng-click="qa_add_comment_button_pressed()">Add Comment</a>
                     </div>
                     <div class="input-field" ng-show="qa_show_new_comment">
-                        <textarea class="validate" ng-model="qa_current_comment"></textarea>
+                        <!-- <textarea class="validate" ng-model="qa_current_comment"></textarea> -->
+                        <!-- ------------------------------------------------------------------------------------ -->
+                        <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                            <div class="grid-s12-m12-l12">
+                                <ul class="tabs" id="qaAddCommentTabs">
+                                    <li id="qaAddCommentWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#qaAddCommentWrite">Write</a></li>
+                                    <li id="qaAddCommentPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#qaAddCommentPreview">Preview</a></li>
+                                </ul>
+                            </div>
+                            <div id="qaAddCommentWrite" class="grid-s12-m12-l12">
+                                <textarea class="validate" ng-model="qa_current_comment"></textarea>
+                            </div>
+                            <div id="qaAddCommentPreview" class="grid-s12-m12-l12 input-field">
+                                Preview Text
+                            </div>
+                        </div>
+                        <!-- ------------------------------------------------------------------------------------ -->
                         <div>
                             <label><input type="radio" ng-model="qa_comment_opinion" value="note" checked /><span>Note</span></label>
                             <label><input type="radio" ng-model="qa_comment_opinion" value="agree"/><span>Agree</span></label>
@@ -1330,7 +1385,23 @@
                             <a class="waves-effect btn-flat qaReplyBtn" href=""
                                 ng-click="qa_reply_button_clicked(post.id)"><u>Reply</u></a>
                             <div class="input-field" ng-show="post.replying">
-                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                <!-- <textarea class="validate" ng-model="qa_current_reply"></textarea> -->
+                                <!-- ------------------------------------------------------------------------------------ -->
+                                <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                    <div class="grid-s12-m12-l12">
+                                        <ul class="tabs" id="postTabs">
+                                            <li id="postWriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#postWrite">Write</a></li>
+                                            <li id="postPreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#postPreview">Preview</a></li>
+                                        </ul>
+                                    </div>
+                                    <div id="postWrite" class="grid-s12-m12-l12">
+                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                    </div>
+                                    <div id="postPreview" class="grid-s12-m12-l12 input-field">
+                                        Preview Text
+                                    </div>
+                                </div>
+                                <!-- ------------------------------------------------------------------------------------ -->
                                 <div>
                                     <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                                     <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
@@ -1358,7 +1429,23 @@
                                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                                         ng-click="qa_reply_button_clicked(post2.id)"><u>Reply</u></a>
                                     <div class="input-field" ng-show="post2.replying">
-                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                        <!-- <textarea class="validate" ng-model="qa_current_reply"></textarea> -->
+                                        <!-- ------------------------------------------------------------------------------------ -->
+                                        <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                            <div class="grid-s12-m12-l12">
+                                                <ul class="tabs" id="post2Tabs">
+                                                    <li id="post2WriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#post2Write">Write</a></li>
+                                                    <li id="post2PreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#post2Preview">Preview</a></li>
+                                                </ul>
+                                            </div>
+                                            <div id="post2Write" class="grid-s12-m12-l12">
+                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                            </div>
+                                            <div id="post2Preview" class="grid-s12-m12-l12 input-field">
+                                                Preview Text
+                                            </div>
+                                        </div>
+                                        <!-- ------------------------------------------------------------------------------------ -->
                                         <div>
                                             <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                                             <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
@@ -1386,7 +1473,23 @@
                                             <a class="waves-effect btn-flat qaReplyBtn" href=""
                                                 ng-click="qa_reply_button_clicked(post3.id)"><u>Reply</u></a>
                                             <div class="input-field" ng-show="post3.replying">
-                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                <!-- <textarea class="validate" ng-model="qa_current_reply"></textarea> -->
+                                                <!-- ------------------------------------------------------------------------------------ -->
+                                                <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                                    <div class="grid-s12-m12-l12">
+                                                        <ul class="tabs" id="post3Tabs">
+                                                            <li id="post3WriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#post3Write">Write</a></li>
+                                                            <li id="post3PreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#post3Preview">Preview</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div id="post3Write" class="grid-s12-m12-l12">
+                                                        <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                    </div>
+                                                    <div id="post3Preview" class="grid-s12-m12-l12 input-field">
+                                                        Preview Text
+                                                    </div>
+                                                </div>
+                                                <!-- ------------------------------------------------------------------------------------ -->
                                                 <div>
                                                     <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                                                     <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
@@ -1414,8 +1517,24 @@
                                                     <a class="waves-effect btn-flat qaReplyBtn" href=""
                                                         ng-click="qa_reply_button_clicked(post4.id)"><u>Reply</u></a>
                                                     <div class="input-field" ng-show="post4.replying">
-                                                        <textarea class="validate"
-                                                            ng-model="qa_current_reply"></textarea>
+                                                        <!-- <textarea class="validate"
+                                                            ng-model="qa_current_reply"></textarea> -->
+                                                        <!-- ------------------------------------------------------------------------------------ -->
+                                                        <div class="row left-align col s12 grid-s12-m12-l12" style="margin-bottom: 0px; margin-top:15px; border: 1px solid #9e9e9e; border-radius: 3px;">
+                                                            <div class="grid-s12-m12-l12">
+                                                                <ul class="tabs" id="post4Tabs">
+                                                                    <li id="post4WriteTab" class="tab col s3 grid-s3-m3-l3"><a class="active" href="#post4Write">Write</a></li>
+                                                                    <li id="post4PreviewTab" class="tab col s3 grid-s3-m3-l3"><a href="#post4Preview">Preview</a></li>
+                                                                </ul>
+                                                            </div>
+                                                            <div id="post4Write" class="grid-s12-m12-l12">
+                                                                <textarea class="validate" ng-model="qa_current_reply"></textarea>
+                                                            </div>
+                                                            <div id="post4Preview" class="grid-s12-m12-l12 input-field">
+                                                                Preview Text
+                                                            </div>
+                                                        </div>
+                                                        <!-- ------------------------------------------------------------------------------------ -->
                                                         <div>
                                                             <label><input type="radio" ng-model="qa_reply_opinion" value="note" checked /><span>Note</span></label>
                                                             <label><input type="radio" ng-model="qa_reply_opinion" value="agree"/><span>Agree</span></label>
