add CWL options in frontend #113

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -44,6 +44,8 @@
                     <ul id='downloadDropdownTool' class='dropdown-content'>
                         <li><a ng-click="tool_info_run_pressed('BASH')">BASH executable</a></li>
                         <li><a ng-click="tool_info_run_pressed('JSON')">JSON</a></li>
+                        <li><a ng-click="tool_info_run_pressed('CWLTARGZ')">CWL tar.gz</a></li>
+                        <li><a ng-click="tool_info_run_pressed('CWLZIP')">CWL zip</a></li>
                     </ul>
 
                 </div>
@@ -420,6 +422,8 @@
                     <ul id='downloadDropdownWorkflow' class='dropdown-content'>
                         <li><a ng-click="workflow_info_run_pressed('BASH')">BASH executable</a></li>
                         <li><a ng-click="workflow_info_run_pressed('JSON')">JSON</a></li>
+                        <li><a ng-click="workflow_info_run_pressed('CWLTARGZ')">CWL tar.gz</a></li>
+                        <li><a ng-click="workflow_info_run_pressed('CWLZIP')">CWL zip</a></li>
                     </ul>
                 </div>
                 <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;">
