--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -1221,6 +1221,7 @@
                     <div class="input-field" ng-show="qa_show_new_comment">
                         <textarea class="validate" ng-model="qa_current_comment"></textarea>
                         <div>
+                            <label><input type="radio" ng-model="qa_comment_opinion" value="solution"/><span>Solution</span></label>
                             <label><input type="radio" ng-model="qa_comment_opinion" value="note" checked /><span>Note</span></label>
                             <label><input type="radio" ng-model="qa_comment_opinion" value="agree"/><span>Agree</span></label>
                             <label><input type="radio" ng-model="qa_comment_opinion" value="disagree"/><span>Disagree</span></label>
