--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -143,6 +143,7 @@
                                                 <td>
                                                     <a class="waves-effect waves-light btn-small tooltipped red darken-1"
                                                         ng-show="client.name && client.client && (!$last)"
+                                                        ng-click="profile_delete_client($index)"
                                                         style="padding-left: 7px; padding-right:7px" data-position="bottom"
                                                         data-tooltip="Remove URL"><i class="material-icons">remove</i></a>
                                                 </td>
